[gd_scene load_steps=13 format=2]

[ext_resource path="res://Tracks/radial_blur_spatial.gdshader" type="Shader" id=1]
[ext_resource path="res://Racers/Player/HUD/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Racers/Racer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Racers/Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Racers/Player/Camera.gd" type="Script" id=5]
[ext_resource path="res://Racers/Player/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Racers/General/Bike/Assets/Materials/CarbonFiber/Fabric004_1K_NormalGL_scaled.png" type="Texture" id=7]
[ext_resource path="res://Racers/General/Bike/Assets/Materials/CarbonFiber/Fabric004_1K_Metalness.png" type="Texture" id=8]
[ext_resource path="res://Racers/General/Bike/Assets/Materials/CarbonFiber/Fabric004_1K_Roughness.png" type="Texture" id=9]

[sub_resource type="SpatialMaterial" id=1]
resource_local_to_scene = true
params_cull_mode = 2
metallic_texture = ExtResource( 8 )
roughness_texture = ExtResource( 9 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 7 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/blur_center = Vector2( 0.5, 0.5 )
shader_param/blur_power = 0.01
shader_param/sampling_count = 6

[sub_resource type="QuadMesh" id=3]
material = SubResource( 2 )
size = Vector2( 2, 2 )

[node name="Player" instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="Shielding" parent="EngineRotationHelper/Engine" index="2"]
material/0 = SubResource( 1 )

[node name="CamRotationHelper" type="Spatial" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.22729, 0 )

[node name="SpringArm" type="SpringArm" parent="CamRotationHelper" index="0"]
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 0, 2 )
collision_mask = 14
spring_length = 23.0

[node name="CamPosHelper" type="Spatial" parent="CamRotationHelper/SpringArm" index="0"]

[node name="Camera" type="Camera" parent="CamRotationHelper/SpringArm/CamPosHelper" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 5.96046e-08, 0, -5.96046e-08, 1, 0, 0, 0 )
fov = 40.0
far = 2000.0
script = ExtResource( 5 )

[node name="HUD" parent="CamRotationHelper/SpringArm/CamPosHelper/Camera" index="0" instance=ExtResource( 2 )]

[node name="PauseMenu" parent="CamRotationHelper/SpringArm/CamPosHelper/Camera" index="1" instance=ExtResource( 6 )]

[node name="MotionBlur" type="MeshInstance" parent="CamRotationHelper/SpringArm/CamPosHelper/Camera" index="2"]
visible = false
mesh = SubResource( 3 )
material/0 = null

[editable path="EngineRotationHelper/Engine"]
